# customer-support-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CASE-STUDIES.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  EXTENDING.md  GETTING_STARTED.md  HOW-IT-WORKS.md  INTERVIEW-GUIDE.md  LICENSE  LIMITATIONS.md  Makefile  PRODUCTIONIZATION.md  QUICKSTART.md  README.md  REPOSITORY-MAP.md  RESPONSIBILITY-MAP.md  SETUP.md  TROUBLESHOOTING.md  VALIDATION-CHECKLIST.md  agent-limitations.md  agent-versioning.md  conftest.py  evaluation-criteria.md  example_run.py  interaction-flow.md  llm_client.py  prompt-engineering-notes.md  pyproject.toml  requirements.txt  roadmap.md  run_agent.py  setup.bat  setup.sh  system-prompt.md  tone-guide.md
engine/: __init__.py  classifier.py  escalation.py  logging_config.py  metrics_spec.py  pipeline.py  prioritizer.py  response_router.py
evaluation/: failure-analysis.md  test-cases.md
examples/: end_to_end_trace.md
feedback/: README.md  feedback_store.py  gap_tracker.py  incident_detector.py
integrations/: helpshift_client.py  helpshift_webhook.py  zendesk-integration-guide.md  zendesk_client.py  zendesk_webhook.py
knowledge-base/: banned-account-faq.md  decision-table.md  edge-cases.md  escalation-rules.md  faq-account-access.md  faq-game-mechanics.md  faq-payments.md  faq-technical-issues.md  gdpr-requests.md  refund-policy-detail.md  seasonal-events-guide.md  tos-violations-guide.md  vip-player-handling.md
memory/: session_store.py
multilingual/: README.md  example_multilingual.py  language_handler.py
(+124 files in other folders)
